kubernetes/apps/media/overseerr/app/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN2}
  labels:
    app.kubernetes.io/instance: overseerr2
    app.kubernetes.io/name: overseerr2
  name: overseerr2
  namespace: media
spec:
  ingressClassName: external
  rules:
    - host: &host request.${SECRET_DOMAIN2}
      http:
        paths:
          - backend:
              service:
                name: overseerr
                port:
                  number: 5055
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: overseerr2.tls
